data/derived/comb/progs/unify/prog4307.ml.out
Characters 32-43:
  let rec fixpoint (f,b) = wwhile(f (f b = b), b);;
                                  ^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
